--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects Portal!</title>
+    <title>Projects Portal</title>
     <link rel="icon" type="image/x-icon" href="./image/projects_tab.ico" />
     <link rel="stylesheet" href="./style/main.css" />
   </head>
