add hebrew name to sections

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
+    <!-- topBar (design change ) is אזור עליון:-->
     <header class="topBar">
       <!-- <div id="headerTopLineTopBar"></div> -->
       <div id="flex-container">
@@ -38,6 +39,7 @@
       </div>
     </header>
 
+    <!-- path1 (design change ) is אזור פתיחה:-->
     <div class="path1">
       <h2 id="path1H2">תיק עבודות</h2>
       <p id="path1P">
@@ -84,7 +86,7 @@
         class="rectangle22Image"
       />
     </div>
-
+    <!-- rectangle56 (design change ) is אזור אודות:-->
     <div class="rectangle56">
       <div class="group167" id="about">
         <img
@@ -108,7 +110,7 @@
         <button id="rectangle56Button">להורדת קורות חיים</button>
       </div>
     </div>
-
+    <!-- rectangle55 (design change ) is  אזור גלריה::-->
     <div class="rectangle55" id="work">
       <h2 class="rectangle55H2">עבודות נבחרות</h2>
       <p id="rectangle55P">
@@ -335,7 +337,7 @@
       </div>
       <!-- </div> -->
     </div>
-
+    <!-- rectangle17 (design change ) isאזור צור קשר :::-->
     <!-- rectangle17-->
     <!-- ------------------------------- -->
     <div class="rectangle17" id="contact">
@@ -377,7 +379,7 @@
       </div>
     </div>
 
-    <!-- rectangle6 = socialMedia -->
+    <!-- rectangle6 = socialMedia = אזור תחתון :-->
     <!-- ------------------------------- -->
 
     <div class="socialMedia">
