--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects Portal</title>
     <link rel="icon" type="image/x-icon" href="./image/projects_tab.ico" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
@@ -340,14 +346,96 @@
     <!-- rectangle17 (design change ) isאזור צור קשר :::-->
     <!-- rectangle17-->
     <!-- ------------------------------- -->
-    <div class="rectangle17" id="contact">
-      <!-- <div class="recyangle17Img"> -->
+
+    <div class="container-fluid d-flex inputFormContainer">
+      <div class="row">
+        <div class="container col-md-1"></div>
+        <div
+          class="container col-md-5 col-md-1 pb-5 d-md-block d-none imageContainer"
+        >
+          <img
+            src="./image/Rectangle 41.png"
+            alt="envelope"
+            class="img-fluid"
+          />
+        </div>
+
+        <div
+          class="container col-md-5 col-md-1 d-sm-block d-none d-md-none imageContainer"
+        >
+          <img
+            src="./image/Rectangle 41.png"
+            alt="envelope"
+            class="img-fluid"
+            style="width: 20%;"
+          />
+        </div>
+
+        <div class="container col-md-5 pt-5 formContainer">
+          <h2 class="col-sm-12 text-end h2Font">צור קשר</h2>
+          <p class="text-end col-sm-12 pFont">
+            איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום”
+            בעת עריכ.
+          </p>
+          <form class="formTextContainer">
+            <div class="form-group">
+              <label for="uName" class="col-sm-12 text-end labelFont"
+                >שם מלא</label
+              >
+              <input
+                type="text"
+                class="text-end form-control"
+                id="uName"
+                required
+              />
+
+              <label for="email" class="col-sm-12 text-end labelFont"
+                >:דוא״ל</label
+              >
+              <input
+                type="email"
+                class="text-end form-control"
+                id="email"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="Utel" class="col-sm-12 text-end labelFont"
+                >:טלפון</label
+              >
+              <input type="tel" class="form-control" id="Utel" required />
+            </div>
+
+            <div class="form-group">
+              <label for="uText" class="col-sm-12 text-end labelFont"
+                >:תוכן ההודעה</label
+              >
+              <textarea
+                id="uText"
+                cols="30"
+                rows="5"
+                class="col-sm-12 text-end"
+              ></textarea>
+            </div>
+
+            <button
+              type="submit"
+              class="btn btn-info btn-sm float-end submitFont"
+            >
+              שליחה
+            </button>
+          </form>
+        </div>
+        <div class="container col-md-1"></div>
+      </div>
+    </div>
+
+    <!-- <div class="rectangle17" id="contact">
       <img
         src="./image/Rectangle 41.png"
         alt="envelope"
         class="rectangle17Img"
       />
-      <!-- </div> -->
 
       <div class="rectangle17Input">
         <h2 class="rectangle17InputH2">צור קשר</h2>
@@ -377,7 +465,7 @@
           <input value="שליחה" type="submit" class="formInputSubmit" />
         </form>
       </div>
-    </div>
+    </div>  -->
 
     <!-- rectangle6 = socialMedia = אזור תחתון :-->
     <!-- ------------------------------- -->
@@ -436,5 +524,10 @@
 
     <!--  rectangle43-->
     <div class="rectangle43"></div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
