clean unused commented code

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
       </div>
       <!-- </div> -->
     </div>
-    <!-- rectangle17 (design change ) isאזור צור קשר :::-->
-    <!-- rectangle17-->
+    <!-- inputFormContainer (design change ) isאזור צור קשר :::-->
+    
     <!-- ------------------------------- -->
 
     <div class="container-fluid d-flex inputFormContainer">
@@ -430,42 +430,6 @@
       </div>
     </div>
 
-    <!-- <div class="rectangle17" id="contact">
-      <img
-        src="./image/Rectangle 41.png"
-        alt="envelope"
-        class="rectangle17Img"
-      />
-
-      <div class="rectangle17Input">
-        <h2 class="rectangle17InputH2">צור קשר</h2>
-        <p class="rectangle17InputP1">
-          איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום”
-          בעת עריכ.
-        </p>
-        <form action="">
-          <label for="uName" class="labels">שם מלא</label>
-          <input
-            type="text"
-            value="שם מלא"
-            class="formInput"
-            id="uName"
-            required
-          />
-
-          <label for="uEmail" class="labels">דוא״ל</label>
-          <input type="email" class="formInput" id="uEmail" required />
-
-          <label for="uTel" class="labels">טלפון</label>
-          <input type="tel" class="formInput" id="uTel" required />
-
-          <label for="uText" class="labels">תוכן ההודעה</label>
-          <textarea id="uText" cols="30" rows="5" class="formInput1"></textarea>
-
-          <input value="שליחה" type="submit" class="formInputSubmit" />
-        </form>
-      </div>
-    </div>  -->
 
     <!-- rectangle6 = socialMedia = אזור תחתון :-->
     <!-- ------------------------------- -->
