--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects Portal</title>
-    <link rel="icon" type="image/x-icon" href="./image/projects_tab.ico" />
+    <link rel="icon" type="image/x-icon" href="./images/projects_tab.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,8 +27,8 @@
     <header class="topBar">
       <!-- <div id="headerTopLineTopBar"></div> -->
       <div id="flex-container">
-        <img src="image/profile-image.jpeg" alt="profile" id="profileImage" />
-        <img src="image/myName.png" alt="my name" id="myName" />
+        <img src="images/profile-image.jpeg" alt="profile" id="profileImage" />
+        <img src="images/myName.png" alt="my name" id="myName" />
         <nav>
           <!-- <div class="hamburger">&#9776;</div> -->
           <label for="checkHamburger" class="labels"
@@ -57,37 +57,53 @@
 
     <div class="rectangle22">
       <img
-        src="./image/img-HTML.png"
+        src="./images/img-HTML.png"
         alt="HTML Icon"
         class="rectangle22Image"
       />
-      <img src="./image/img-CSS.png" alt="CSS  Icon" class="rectangle22Image" />
       <img
-        src="./image/img-Bootstrap.png"
+        src="./images/img-CSS.png"
+        alt="CSS  Icon"
+        class="rectangle22Image"
+      />
+      <img
+        src="./images/img-Bootstrap.png"
         alt="BootStrap  Icon"
         class="rectangle22Image"
       />
       <img
-        src="./image/img-SASS.png"
+        src="./images/img-SASS.png"
         alt="SAAS  Icon"
         class="rectangle22Image"
       />
-      <img src="./image/img-JS.png" alt="JS  Icon" class="rectangle22Image" />
-      <img src="./image/img-OOP.png" alt="OOP  Icon" class="rectangle22Image" />
-      <img src="./image/img-ES6.png" alt="E56  Icon" class="rectangle22Image" />
+      <img src="./images/img-JS.png" alt="JS  Icon" class="rectangle22Image" />
       <img
-        src="./image/img-TypeScript.png"
+        src="./images/img-OOP.png"
+        alt="OOP  Icon"
+        class="rectangle22Image"
+      />
+      <img
+        src="./images/img-ES6.png"
+        alt="E56  Icon"
+        class="rectangle22Image"
+      />
+      <img
+        src="./images/img-TypeScript.png"
         alt="TS  Icon"
         class="rectangle22Image"
       />
-      <img src="./image/img-API.png" alt="API  Icon" class="rectangle22Image" />
       <img
-        src="./image/img-React.png"
+        src="./images/img-API.png"
+        alt="API  Icon"
+        class="rectangle22Image"
+      />
+      <img
+        src="./images/img-React.png"
         alt="React  Icon"
         class="rectangle22Image"
       />
       <img
-        src="./image/img-NodeJS.png"
+        src="./images/img-NodeJS.png"
         alt="NodeJS  Icon"
         class="rectangle22Image"
       />
@@ -96,7 +112,7 @@
     <div class="rectangle56">
       <div class="group167" id="about">
         <img
-          src="image/profile-image.jpeg"
+          src="images/profile-image.jpeg"
           alt="profile"
           class="profileImage1"
           id="about"
@@ -127,7 +143,7 @@
         <!-- project 1 -->
         <div class="itemGrid">
           <img
-            src="./image/project1.png"
+            src="./images/project1.png"
             alt="project 1"
             class="projectImage"
           />
@@ -136,22 +152,22 @@
             <p class="projectText">האתר שיוביל את העסק שלך למחר</p>
             <div class="projectImageTech">
               <img
-                src="./image/img-HTML.png"
+                src="./images/img-HTML.png"
                 alt="HTML Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-CSS.png"
+                src="./images/img-CSS.png"
                 alt="CSS  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-Bootstrap.png"
+                src="./images/img-Bootstrap.png"
                 alt="BootStrap  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-SASS.png"
+                src="./images/img-SASS.png"
                 alt="SAAS  Icon"
                 class="projectImageTechIcon"
               />
@@ -163,7 +179,7 @@
         <!-- project 2 -->
         <div class="itemGrid">
           <img
-            src="./image/project2.png"
+            src="./images/project2.png"
             alt="project 2"
             class="projectImage"
           />
@@ -172,22 +188,22 @@
             <p class="projectText">אתר המתנות הגדול</p>
             <div class="projectImageTech">
               <img
-                src="./image/img-HTML.png"
+                src="./images/img-HTML.png"
                 alt="HTML Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-CSS.png"
+                src="./images/img-CSS.png"
                 alt="CSS  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-Bootstrap.png"
+                src="./images/img-Bootstrap.png"
                 alt="BootStrap  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-SASS.png"
+                src="./images/img-SASS.png"
                 alt="SAAS  Icon"
                 class="projectImageTechIcon"
               />
@@ -199,7 +215,7 @@
         <!-- project 3 -->
         <div class="itemGrid">
           <img
-            src="./image/project3.png"
+            src="./images/project3.png"
             alt="project 3"
             class="projectImage"
           />
@@ -208,22 +224,22 @@
             <p class="projectText">אתר הקפה הגדול בישראל</p>
             <div class="projectImageTech">
               <img
-                src="./image/img-HTML.png"
+                src="./images/img-HTML.png"
                 alt="HTML Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-CSS.png"
+                src="./images/img-CSS.png"
                 alt="CSS  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-Bootstrap.png"
+                src="./images/img-Bootstrap.png"
                 alt="BootStrap  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-SASS.png"
+                src="./images/img-SASS.png"
                 alt="SAAS  Icon"
                 class="projectImageTechIcon"
               />
@@ -235,7 +251,7 @@
         <!-- projec4  -->
         <div class="itemGrid">
           <img
-            src="./image/project4.png"
+            src="./images/project4.png"
             alt="project 4"
             class="projectImage"
           />
@@ -244,22 +260,22 @@
             <p class="projectText">האתר שיסייע לעסק שלך להתכונן לעתיד</p>
             <div class="projectImageTech">
               <img
-                src="./image/img-HTML.png"
+                src="./images/img-HTML.png"
                 alt="HTML Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-CSS.png"
+                src="./images/img-CSS.png"
                 alt="CSS  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-Bootstrap.png"
+                src="./images/img-Bootstrap.png"
                 alt="BootStrap  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-SASS.png"
+                src="./images/img-SASS.png"
                 alt="SAAS  Icon"
                 class="projectImageTechIcon"
               />
@@ -271,7 +287,7 @@
         <!-- project 5 -->
         <div class="itemGrid">
           <img
-            src="./image/project5.png"
+            src="./images/project5.png"
             alt="project 5"
             class="projectImage"
           />
@@ -280,22 +296,22 @@
             <p class="projectText">אתר הטיולים לבחירת אתרי טיול וחבילות נופש</p>
             <div class="projectImageTech">
               <img
-                src="./image/img-HTML.png"
+                src="./images/img-HTML.png"
                 alt="HTML Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-CSS.png"
+                src="./images/img-CSS.png"
                 alt="CSS  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-Bootstrap.png"
+                src="./images/img-Bootstrap.png"
                 alt="BootStrap  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-SASS.png"
+                src="./images/img-SASS.png"
                 alt="SAAS  Icon"
                 class="projectImageTechIcon"
               />
@@ -307,7 +323,7 @@
         <!-- project 6 -->
         <div class="itemGrid">
           <img
-            src="./image/project6.png"
+            src="./images/project6.png"
             alt="project 6"
             class="projectImage"
           />
@@ -316,22 +332,22 @@
             <p class="projectText">אתר לשירותי יעוץ</p>
             <div class="projectImageTech">
               <img
-                src="./image/img-HTML.png"
+                src="./images/img-HTML.png"
                 alt="HTML Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-CSS.png"
+                src="./images/img-CSS.png"
                 alt="CSS  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-Bootstrap.png"
+                src="./images/img-Bootstrap.png"
                 alt="BootStrap  Icon"
                 class="projectImageTechIcon"
               />
               <img
-                src="./image/img-SASS.png"
+                src="./images/img-SASS.png"
                 alt="SAAS  Icon"
                 class="projectImageTechIcon"
               />
@@ -344,17 +360,17 @@
       <!-- </div> -->
     </div>
     <!-- inputFormContainer (design change ) isאזור צור קשר :::-->
-    
+
     <!-- ------------------------------- -->
 
-    <div class="container-fluid d-flex inputFormContainer">
+    <div class="container-fluid d-flex inputFormContainer" id="contact">
       <div class="row">
         <div class="container col-md-1"></div>
         <div
           class="container col-md-5 col-md-1 pb-5 d-md-block d-none imageContainer"
         >
           <img
-            src="./image/Rectangle 41.png"
+            src="./images/Rectangle 41.png"
             alt="envelope"
             class="img-fluid"
           />
@@ -364,10 +380,10 @@
           class="container col-md-5 col-md-1 d-sm-block d-none d-md-none imageContainer"
         >
           <img
-            src="./image/Rectangle 41.png"
+            src="./images/Rectangle 41.png"
             alt="envelope"
             class="img-fluid"
-            style="width: 20%;"
+            style="width: 20%"
           />
         </div>
 
@@ -430,7 +446,6 @@
       </div>
     </div>
 
-
     <!-- rectangle6 = socialMedia = אזור תחתון :-->
     <!-- ------------------------------- -->
 
@@ -439,33 +454,33 @@
         <div class="emptyLine"></div>
         <!-- <div class="socialMediaItemGrid"> -->
         <img
-          src="./image/Icon material-location-on.png"
+          src="./images/Icon material-location-on.png"
           alt="location"
           class="socialMediaItemGridIcon"
         />
         <img
-          src="./image/Icon simple-email.png"
+          src="./images/Icon simple-email.png"
           alt="mail"
           class="socialMediaItemGridIcon"
         />
 
         <img
-          src="./image/Icon simple-whatsapp.png"
+          src="./images/Icon simple-whatsapp.png"
           alt="location"
           class="socialMediaItemGridIcon"
         />
         <img
-          src="./image//Icon simple-phone.png"
+          src="./images//Icon simple-phone.png"
           alt="location"
           class="socialMediaItemGridIcon"
         />
         <img
-          src="./image/Icon awesome-linkedin-in.png"
+          src="./images/Icon awesome-linkedin-in.png"
           alt="location"
           class="socialMediaItemGridIcon"
         />
         <img
-          src="./image/Icon awesome-facebook-f.png"
+          src="./images/Icon awesome-facebook-f.png"
           alt="location"
           class="socialMediaItemGridIcon"
         />
