finish project2landing page start project2 html

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               />
             </div>
             <!-- <button class="projectLinkButton">Project 1</button> -->
-            <a class="projectLinkButton" href="./projects/projectName2/index..html" target="_blank">Project 2</a>
+            <a class="projectLinkButton" href="./projects/projectName2/index..html" ta>Project 2</a>
           </div>
         </div>
         <!-- project 3 -->
