--- a/projects/projectName2/project2LandingPage..html
+++ b/projects/projectName2/project2LandingPage..html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Name2</title>
-    <link rel="stylesheet" href="./style/index.css" />
+    <title>Project 2 Landing Page</title>
+    <link rel="stylesheet" href="./style/project2LandingPage..css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,11 +23,9 @@
     <!-- תפריט -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-        <!-- <div class="container-fluid"> -->
         <img src="images/profile-image.jpeg" alt="profile" id="profileImage" />
         <img src="images/myName.png" alt="my name" id="myName" />
-        <!-- </div> -->
+
         <button
           class="navbar-toggler"
           type="button"
@@ -37,18 +41,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link disabled" aria-current="page" href="#"
+              <a class="nav-link disabled navProj2" aria-current="page" href="#"
                 >צור קשר</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">שירותים</a>
+              <a class="nav-link disabled navProj2" href="#">שירותים</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">אודות</a>
+              <a class="nav-link disabled navProj2" href="#">אודות</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active">ראשי</a>
+              <a class="nav-link active navProj2">ראשי</a>
             </li>
           </ul>
         </div>
@@ -58,29 +62,25 @@
     <!-- שם הפרןיקט -->
 
     <div class="container-fluid mainSection">
-      <h1 class="text-center mainSectionH1">שם הפרויקט</h1>
-      <p class="text-center">
+      <h1 class="text-center mainSectionH1">פרויקט 2</h1>
+      <p class="text-center mainSectionP">
         רם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש ממלא מקום
         בעת עריכה, בתחום הדפוס, ההדפסה והפרסום.
       </p>
 
-      <!-- <div class="gap-2 col-2 mx-auto"> -->
-      <!-- <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-info">Info</button> -->
       <div class="container text-center">
         <div class="row">
           <div class="col"></div>
           <div class="col">
-            <button type="button" class="btn btn-info">Info</button>
+            <button type="button" class="btn btn-info mainSectionBtn">להורדת הפרויקט</button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-info">Info</button>
+            <button type="button" class="btn btn-info">לצפייה בפרויקט</button>
           </div>
           <div class="col"></div>
         </div>
       </div>
     </div>
-    <!-- </div> -->
 
     <!-- שורת אייקונים  -->
 
@@ -115,13 +115,14 @@
       </div>
     </div>
 
-    <div class="container-fluid imageOfWebSite">
-      <div class="container imageOfWebSiteInternal">
-      <img src="./images/tempWebSite.png" alt="Centered Image" class=" "/>
+    <div class="imageDiv">
+      <img
+        src="./images/tempWebSite.png"
+        alt="Centered Image"
+        class="imageOfWebSite"
+      />
     </div>
-  </div>
 
-    
     <footer class="container-fluid footerStyle"></footer>
 
     <script
