--- a/projects/projectName2/project2.html
+++ b/projects/projectName2/project2.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2 </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project 2</title>
     <link rel="stylesheet" href="./style/project2.css" />
-</head>
-<body>
-    <div class=""></div>
-</body>
+  </head>
+  <body>
+    <div dir="rtl" class="mainDiv">
+      <h1 class="">Here & Now</h1>
+      <h2>רצינו להזמין אתכם להנות משלל מתנות</h2>
+      <p>
+        ורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לפרומי בלוף קינץ תתיח
+        לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקרי
+      </p>
+    </div>
+    <div class="formDiv">
+      <div class="nameLa">
+        <label for="uName" >שם מלא</label>
+      </div>
+      <div class="nameIn"><input type="text"  id="uName" required /></div>
+      <div class="mailLa"><label for="email" >:דוא״ל</label></div>
+      <div class="mailIn"><input type="email"  id="email" required /></div>
+      <div class="buttonP">
+        <button type="button" class="btn btn-info ">עדכנו אותי</button>
+      </div>
+    </div>
+  </body>
 </html>
