--- a/projects/projectName2/project2.html
+++ b/projects/projectName2/project2.html
@@ -22,15 +22,14 @@
       </p>
     </div>
     <div class="formDiv">
-      <div class="nameLa">
-        <label for="uName" >שם מלא</label>
-      </div>
-      <div class="nameIn"><input type="text"  id="uName" required /></div>
-      <div class="mailLa"><label for="email" >:דוא״ל</label></div>
-      <div class="mailIn"><input type="email"  id="email" required /></div>
+      <div class="mailLa"><label for="email">:דוא״ל</label></div>
+      <div class="nameLa"><label for="uName">שם מלא</label></div>
+
       <div class="buttonP">
-        <button type="button" class="btn btn-info ">עדכנו אותי</button>
+        <button type="button" class="btn btn-info">עדכנו אותי</button>
       </div>
+      <div class="mailIn"><input type="email" id="email" required /></div>
+      <div class="nameIn"><input type="text" id="uName" required /></div>
     </div>
   </body>
 </html>
