complete project 2 html

--- a/projects/projectName2/project2.html
+++ b/projects/projectName2/project2.html
@@ -7,6 +7,18 @@
       href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&family=Varela+Round&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 2</title>
@@ -21,15 +33,24 @@
         לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקרי
       </p>
     </div>
-    <div class="formDiv">
-      <div class="mailLa"><label for="email">:דוא״ל</label></div>
+    <form action="" class="formDiv" id="form1">
+      <!-- <div > -->
       <div class="nameLa"><label for="uName">שם מלא</label></div>
-
-      <div class="buttonP">
-        <button type="button" class="btn btn-info">עדכנו אותי</button>
-      </div>
-      <div class="mailIn"><input type="email" id="email" required /></div>
       <div class="nameIn"><input type="text" id="uName" required /></div>
-    </div>
+      <div class="mailLa"><label for="email">:דוא״ל</label></div>
+      <div class="mailIn"><input type="email" id="email" required /></div>
+      <!-- 
+      <div class="buttonP">
+        <button type="button" class="btn btn-info"></button>
+      </div> -->
+      <input value="עדכנו אותי" type="submit" class="buttonP" />
+      <!-- </div> -->
+    </form>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
