--- a/projects/projectName2/project2LandingPage..html
+++ b/projects/projectName2/project2LandingPage..html
@@ -124,7 +124,7 @@
     <div class="imageDiv">
       <img
         src="./images/WebSite.png"
-        alt="Centered Image"
+        alt="Project2 image"
         class="imageOfWebSite"
       />
       <!-- <object type="text/html" width="1920" height="300" data="project2.html"></object> -->
