--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             class="projectImage"
           />
           <div class="projectFlex">
-            <h2 class="projectTitle">ביחד נבנא את העתיד</h2>
+            <h2 class="projectTitle">ביחד נבנה את העתיד</h2>
             <p class="projectText">האתר שיסייע לעסק שלך להתכונן לעתיד</p>
             <div class="projectImageTech">
               <img
