--- a/projects/projectName2/project2LandingPage.html
+++ b/projects/projectName2/project2LandingPage.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 2 Landing Page</title>
-    <link rel="stylesheet" href="./style/project2LandingPage..css" />
+    <link rel="stylesheet" href="./style/project2LandingPage.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -68,19 +68,19 @@
         בעת עריכה, בתחום הדפוס, ההדפסה והפרסום.
       </p>
 
-      <div class="container text-center">
-        <div class="row">
+      <div class="container  text-center buttonContainer">
+        <div class="row ">
           <div class="col col-lg-3 col-md-12 colProj2"></div>
           <div class="col col-lg-3 col-md-12 col-sm-12 colProj2">
             
             <a class="projectLinkButton" href="#"
-              >&lt&ltלהורדת הפרויקט<i class=""></i
+              >&lt&lt להורדת הפרויקט<i class=""></i
             ></a>
           </div>
           <div class="col col-lg-3 col-md-12 col-sm-12 colProj2">
             
             <a class="projectLinkButton" href="project2.html" target="_blank"
-              >&lt&ltלצפייה בפרויקט</a
+              >&lt&lt לצפייה בפרויקט</a
             >
           </div>
           <div class="col col-lg-3 col-md-12 colProj2"></div>
