--- a/projects/projectName3/project3.html
+++ b/projects/projectName3/project3.html
@@ -38,13 +38,19 @@
           </p>
           <form>
             <div class="form-control">
-              <label for="name">שם מלא</label>
-              <input type="text" id="name" name="name" required />
+              <label for="name" class="form-control-label">שם מלא</label>
+              <input type="text" id="name" name="name" class="form-control-input" required />
             </div>
             <div class="form-control">
-              <label for="email">דוא״ל</label>
-              <input type="email" id="email" name="email" required />
+              <label for="email" class="form-control-label">דוא״ל</label>
+              <input type="email" id="email" name="email" class="form-control-input" required />
             </div>
+            <button
+              type="submit"
+              class="btn btn-info btn-sm float-end submitFont"
+            >
+              שליחה
+            </button>
           </form>
         </div>
       </div>
