--- a/projects/projectName1/project1.html
+++ b/projects/projectName1/project1.html
@@ -1,21 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 2</title>
-    <link rel="stylesheet" href="./style/project1.css" />
+    <title>Project 1</title>
+    <!-- <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  /> -->
+    <link rel="stylesheet" href="style/project1.css" />
+    <style>
+      body {
+        background: transparent url('images/backgroundimage.png') 0% 0% no-repeat;
+        background-size: cover;
+        /* padding-box:; */
+          height: 40vh;
+      }
+    </style>
   </head>
-  <body>
-   
 
-    <script
+  <body>
+    <div dir="rtl" class="mainBox">
+      <h1>תן לנו להוביל אותך קדימה</h1>
+      <p>
+        לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
+        מקום” בעת עריכ.
+      </p>
+      <form>
+        <div class="form-control">
+          <label for="name" class="form-control-label">שם מלא</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            class="form-control-input"
+            required
+          />
+        </div>
+        <div class="form-control">
+          <label for="email" class="form-control-label">דוא״ל</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            class="form-control-input"
+            required
+          />
+        </div>
+        <button type="submit" class="btn btn-info btn-sm float-end submitFont">
+          שליחה
+        </button>
+      </form>
+    </div>
+
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </body>
 </html>
