--- a/projects/projectName4/project4.html
+++ b/projects/projectName4/project4.html
@@ -9,34 +9,40 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 1</title>
-    <!-- <link
+    <title>Project 4</title>
+    <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
-  /> -->
-    <link rel="stylesheet" href="style/project1.css" />
+  />
+    <link rel="stylesheet" href="style/project4.css" />
     <style>
       body {
-        background: transparent url('images/backgroundimage.png') 0% 0% no-repeat;
+        background: transparent url("images/imageTop.png") 0% 0% no-repeat;
         background-size: cover;
         /* padding-box:; */
-          height: 40vh;
+        height: 40vh;
       }
     </style>
   </head>
 
   <body>
+    <!-- <img src="images/imageTop.png" alt=""> -->
     <div dir="rtl" class="mainBox">
       <h1>תן לנו להוביל אותך קדימה</h1>
       <p>
         לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
         מקום” בעת עריכ.
       </p>
-      <form>
-        <div class="form-control">
+
+      <div class="gridForm">
+        <div class="gridItem">
           <label for="name" class="form-control-label">שם מלא</label>
+        </div>
+        <div class="gridItem"><label for="email" class="form-control-label">דוא״ל</label></div>
+        <div class="gridItem"></div>
+        <div class="gridItem">
           <input
             type="text"
             id="name"
@@ -45,26 +51,23 @@
             required
           />
         </div>
-        <div class="form-control">
-          <label for="email" class="form-control-label">דוא״ל</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            class="form-control-input"
-            required
-          />
-        </div>
-        <button type="submit" class="btn btn-info btn-sm float-end submitFont">
-          שליחה
-        </button>
-      </form>
+        <div class="gridItem"> <input
+          type="email"
+          id="email"
+          name="email"
+          class="form-control-input"
+          required
+        /></div>
+        <div class="gridItem">  <button type="submit" class="btn btn-info btn-sm float-end submitFont"></button></div>
+      </div>
+
+   
     </div>
 
-    <!-- <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
   </body>
 </html>
