--- a/projects/projectName4/project4.html
+++ b/projects/projectName4/project4.html
@@ -7,61 +7,73 @@
       href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 4</title>
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style/project4.css" />
     <style>
-      body {
+      .bodyFormat {
         background: transparent url("images/imageTop.png") 0% 0% no-repeat;
-        background-size: cover;
+        background-size: 100vw 70vh;
+
         /* padding-box:; */
         height: 40vh;
-      }
-    </style>
+      
+      } 
+    </style> 
   </head>
 
-  <body>
+  <body class="bodyFormat">
+   
     <!-- <img src="images/imageTop.png" alt=""> -->
     <div dir="rtl" class="mainBox">
+      <div class="imageForMobile"><img src="./images/ImageMobile.png" alt=""></div>
       <h1>תן לנו להוביל אותך קדימה</h1>
       <p>
         לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
         מקום” בעת עריכ.
       </p>
 
-      <div class="gridForm">
-        <div class="gridItem">
-          <label for="name" class="form-control-label">שם מלא</label>
-        </div>
-        <div class="gridItem"><label for="email" class="form-control-label">דוא״ל</label></div>
-        <div class="gridItem"></div>
-        <div class="gridItem">
-          <input
-            type="text"
-            id="name"
-            name="name"
-            class="form-control-input"
-            required
-          />
-        </div>
-        <div class="gridItem"> <input
+      <form class="gridForm">
+        <label for="name" class="form-control-label">שם מלא</label>
+
+        <label for="email" class="form-control-label emailLabel">דוא״ל</label>
+
+        <div></div>
+
+        <input
+          type="text"
+          id="name"
+          name="name"
+          class="form-control-input"
+          required
+        />
+
+        <input
           type="email"
           id="email"
           name="email"
           class="form-control-input"
           required
-        /></div>
-        <div class="gridItem">  <button type="submit" class="btn btn-info btn-sm float-end submitFont"></button></div>
-      </div>
+        />
 
-   
+        <button type="submit" class="btn btn-info btn-sm float-end submitFont">
+          שליחה
+        </button>
+      </form>
     </div>
 
     <script
