complete project 5 HTM still need mobile version

--- a/projects/projectName5/project5.html
+++ b/projects/projectName5/project5.html
@@ -27,7 +27,9 @@
   </head>
 
   <body>
+    <!-- <div class="main"> -->
     <div class="mainGrid">
+      <!-- <div class="emptyRowOne">1</div> -->
       <div id="image515">
         <img src="images/Rectangle 515.png" alt="Trees" />
       </div>
@@ -84,10 +86,8 @@
           required
         />
 
-        <label for="uText" class="form-control-label"
-          >:תוכן ההודעה</label
-        >
-        
+        <label for="uText" class="form-control-label">:תוכן ההודעה</label>
+
         <textarea
           id="uText"
           cols="30"
@@ -113,6 +113,7 @@
         alt="sunet anf boat"
         id="image506-10"
       />
+      <!-- </div> -->
     </div>
 
     <script
