--- a/projects/projectName7/project7.html
+++ b/projects/projectName7/project7.html
@@ -27,14 +27,36 @@
   </head>
 
   <body>
-    <div class="main">
-      <div class="mainLeft"></div>
-      <div class="mainRight">
-        <div class="iconTop"></div>
-        <div class="formSection"></div>
-        <div class="iconsList"></div>
+    <div class="mainHeader">
+      <div class="iconWhatsapp">
+          <img src="images/Icon awesome-whatsapp.svg" alt="icon" class="imgW">
+      </div>
+      <div dir="rtl" class="headerText">
+        <h1>לחשוב מחוץ ל</h1>
+        <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית להאמית קרהשק סכעיט דז מא, מנכם למטכין נשואי מנורך. לורם איפסום דולור סיט אמט, קוואזי במר מודוף.</p>
+      </div>
+      <div class="iconBox">
+        <img src="images/Group 1050.svg" alt="">
       </div>
     </div>
+    <div class="mainCard">
+      <div class="card card1"></div>
+      <div class="card card2"></div>
+      <div class="card card3"></div>
+      <div class="card card4"></div>
+    </div>
+    <div class="MainContactMap">
+      <div class="MainContact"></div>
+      <div class="MainMap"></div>
+    </div>
+
+    <div class="mainFooterIcons">
+      <div class="icon icon1"></div>
+      <div class="icon icon2"></div>
+      <div class="icon icon3"></div>
+      <div class="icon icon4"></div>
+    </div>
+    <div class="mainFooterLine"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
