--- a/projects/projectName7/project7.html
+++ b/projects/projectName7/project7.html
@@ -40,10 +40,26 @@
       </div>
     </div>
     <div class="mainCard">
-      <div class="card card1"></div>
-      <div class="card card2"></div>
-      <div class="card card3"></div>
-      <div class="card card4"></div>
+      <div class="card card1">
+        <img src="images/location-dot-solid.svg" alt="" class="cardIcon">
+        <h1>כותרת אזור</h1>
+        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה</p>
+      </div>
+      <div class="card card2">
+        <img src="images/address-card-regular.svg" alt="" class="cardIcon">
+        <h1>כותרת אזור</h1>
+        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
+      </div>
+      <div class="card card3">
+        <img src="images/wand-magic-sparkles-solid.svg" alt="" class="cardIcon">
+        <h1>כותרת אזור</h1>
+        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
+      </div>
+      <div class="card card4">
+        <img src="images/briefcase-outline.svg" alt="" class="cardIcon">
+        <h1>כותרת אזור</h1>
+        <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
+      </div>
     </div>
     <div class="MainContactMap">
       <div class="MainContact"></div>
