cont proj 6 include icon images

--- a/projects/projectName7/project7.html
+++ b/projects/projectName7/project7.html
@@ -41,22 +41,22 @@
     </div>
     <div class="mainCard">
       <div class="card card1">
-        <img src="images/location-dot-solid.svg" alt="" class="cardIcon">
+        <img src="images/location-dot-solid.svg" alt="" >
         <h1>כותרת אזור</h1>
         <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה</p>
       </div>
       <div class="card card2">
-        <img src="images/address-card-regular.svg" alt="" class="cardIcon">
+        <img src="images/address-card-regular.svg" alt="" >
         <h1>כותרת אזור</h1>
         <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
       </div>
       <div class="card card3">
-        <img src="images/wand-magic-sparkles-solid.svg" alt="" class="cardIcon">
+        <img src="images/wand-magic-sparkles-solid.svg" alt="" >
         <h1>כותרת אזור</h1>
         <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
       </div>
       <div class="card card4">
-        <img src="images/briefcase-outline.svg" alt="" class="cardIcon">
+        <img src="images/briefcase-outline.svg" alt="" >
         <h1>כותרת אזור</h1>
         <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם 
       </div>
@@ -67,10 +67,12 @@
     </div>
 
     <div class="mainFooterIcons">
-      <div class="icon icon1"></div>
-      <div class="icon icon2"></div>
-      <div class="icon icon3"></div>
-      <div class="icon icon4"></div>
+      <div class="icon icon1">
+        <img src="images/facebook-f.svg" alt="">
+      </div>
+      <div class="icon icon2"><img src="images/instagram.svg" alt=""></div>
+      <div class="icon icon3"><img src="images/linkedin-in.svg" alt=""></div>
+      <div class="icon icon4"><img src="images/phone-solid.svg" alt=""></div>
     </div>
     <div class="mainFooterLine"></div>
 
