--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <!-- project 1 -->
         <div class="itemGrid">
           <img
-            src="./images/project1.png"
+            src="./projects/projectName1/images/WebSite.png"
             alt="project 1"
             class="projectImage"
           />
@@ -173,13 +173,13 @@
               />
             </div>
             <!-- <button class="projectLinkButton">Project 1</button> -->
-            <a class="projectLinkButton" href="/path/to/your/page">Project 1</a>
+            <a class="projectLinkButton" target="_blank" href="/projects/projectName1/project1LandingPage.html">Project 1</a>
           </div>
         </div>
         <!-- project 2 -->
         <div class="itemGrid">
           <img
-            src="./images/project2.png"
+            src="./projects/projectName2/images/WebSite.png"
             alt="project 2"
             class="projectImage"
           />
@@ -209,13 +209,13 @@
               />
             </div>
             <!-- <button class="projectLinkButton">Project 1</button> -->
-            <a class="projectLinkButton" href="./projects/projectName2/project2LandingPage..html" target=_blank>Project 2</a>
+            <a class="projectLinkButton" target="_blank" href="/projects/projectName2/project2LandingPage.html ">Project 2</a>
           </div>
         </div>
         <!-- project 3 -->
         <div class="itemGrid">
           <img
-            src="./images/project3.png"
+            src="./projects/projectName3/images/WebSite.png"
             alt="project 3"
             class="projectImage"
           />
@@ -245,13 +245,13 @@
               />
             </div>
             <!-- <button class="projectLinkButton">Project 1</button> -->
-            <a class="projectLinkButton" href="/path/to/your/page">Project 3</a>
+            <a class="projectLinkButton" target="_blank" href="/projects/projectName3/project3LandingPage.html">Project 3</a>
           </div>
         </div>
         <!-- projec4  -->
         <div class="itemGrid">
           <img
-            src="./images/project4.png"
+            src="./projects/projectName4/images/WebSite.png"
             alt="project 4"
             class="projectImage"
           />
@@ -281,13 +281,13 @@
               />
             </div>
             <!-- <button class="projectLinkButton">Project 1</button> -->
-            <a class="projectLinkButton" href="/path/to/your/page">Project 4</a>
+            <a class="projectLinkButton" target="_blank" href="/projects/projectName4/project4LandingPage.html">Project 4</a>
           </div>
         </div>
         <!-- project 5 -->
         <div class="itemGrid">
           <img
-            src="./images/project5.png"
+            src="./projects/projectName5/images/WebSite.png"
             alt="project 5"
             class="projectImage"
           />
@@ -317,13 +317,13 @@
               />
             </div>
             <!-- <button class="projectLinkButton">Project 1</button> -->
-            <a class="projectLinkButton" href="/path/to/your/page">Project 5</a>
+            <a class="projectLinkButton" target="_blank" href="/projects/projectName5/project5LandingPage.html">Project 5</a>
           </div>
         </div>
         <!-- project 6 -->
         <div class="itemGrid">
           <img
-            src="./images/project6.png"
+            src="./projects/projectName7/images/WebSite.png"
             alt="project 6"
             class="projectImage"
           />
@@ -353,7 +353,7 @@
               />
             </div>
             <!-- <button class="projectLinkButton">Project 1</button> -->
-            <a class="projectLinkButton" href="/path/to/your/page">Project 6</a>
+            <a class="projectLinkButton" target="_blank" href="/projects/projectName7/project7LandingPage.html">Project 6</a>
           </div>
         </div>
       </div>
