add dowload to all projects

--- a/projects/projectName1/project1LandingPage.html
+++ b/projects/projectName1/project1LandingPage.html
@@ -72,8 +72,8 @@
         <div class="row ">
           <div class="col col-lg-3 col-md-12 colProj2"></div>
           <div class="col col-lg-3 col-md-12 col-sm-12 colProj2">
-            
-            <a class="projectLinkButton" href="#"
+          
+            <a class="projectLinkButton" href="./project1.zip" download="project1.zip"
               >&lt&lt להורדת הפרויקט<i class=""></i
             ></a>
           </div>
