--- a/projects/projectName7/project7LandingPage.html
+++ b/projects/projectName7/project7LandingPage.html
@@ -73,9 +73,9 @@
           <div class="col col-lg-3 col-md-12 colProj2"></div>
           <div class="col col-lg-3 col-md-12 col-sm-12 colProj2">
             
-            <a class="projectLinkButton" href="#"
-              >&lt&lt להורדת הפרויקט<i class=""></i
-            ></a>
+            <a class="projectLinkButton" href="./project7.zip" download="project6.zip"
+            >&lt&lt להורדת הפרויקט<i class=""></i
+          ></a>
           </div>
           <div class="col col-lg-3 col-md-12 col-sm-12 colProj2">
             
