Correct respnsive issues in mobile

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <form class="formTextContainer">
             <div class="form-group">
               <label for="uName" class="col-sm-12 text-end labelFont"
-                >שם מלא</label
+                >:שם מלא</label
               >
               <input
                 type="text"
