add hebrew text

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
     <div class="path1">
       <h2 id="path1H2">תיק עבודות</h2>
       <p id="path1P">
-        לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
-        מקום” בעת עריכה, בתחום הדפוס, ההדפסה והפרסום. למשל: לורםלורם איפסום או
-        בקיצור לי.
+        אתר זה משקף את הפרויקטים שפותחו והוגשו במהלך הילימוד ב מכללת HackerU. הפרויקטים משקפים את מגוון הטכנולגיות שמתכנת fullstack נדרש לדעת. לכל הפרויקטים ניתן לגשת דרך עמודי נחיתה. ניתן גם להוריד את הפרויקטים השונים לספריות מקומיות. לנוחיות המשתמש
       </p>
     </div>
 
@@ -136,8 +134,7 @@
     <div class="rectangle55" id="work">
       <h2 class="rectangle55H2">עבודות נבחרות</h2>
       <p id="rectangle55P">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit minus
-        facere inventore. Laboriosam architecto alias ipsum vel.
+        עמוד הפרויקטים. כל כרטיס מקושר לעמוד הנחיתה של הפרויקט שיאפשר למשתמש להריץ או להוריד את קוד האתר
       </p>
       <div class="rectangle55Grid">
         <!-- project 1 -->
@@ -389,9 +386,8 @@
 
         <div class="container col-md-5 pt-5 formContainer">
           <h2 class="col-sm-12 text-end h2Font">צור קשר</h2>
-          <p class="text-end col-sm-12 pFont">
-            איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום”
-            בעת עריכ.
+          <p class="text-end col-sm-12 pFont hebrew-text">
+            נא למלא את הפרטים ונשמח ליצור קשר במהירות
           </p>
           <form class="formTextContainer">
             <div class="form-group">
