fix right bodt margin in mobile

--- a/index.html
+++ b/index.html
@@ -380,8 +380,10 @@
             src="./images/Rectangle 41.png"
             alt="envelope"
             class="img-fluid"
-            style="width: 20%"
+            
+            
           />
+          <!-- style="width: 20%" -->
         </div>
 
         <div class="container col-md-5 pt-5 formContainer">
