Add link from project landing pages to main html

--- a/projects/projectName1/project1LandingPage.html
+++ b/projects/projectName1/project1LandingPage.html
@@ -24,8 +24,14 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <img src="images/profile-image.jpeg" alt="profile" id="profileImage" />
-        <img src="images/myName.png" alt="my name" id="myName" />
-
+        <!-- <img src="images/myName.png" alt="my name" id="myName" /> -->
+        <a
+              
+              href="../../index.html"
+              ><img src="images/myName.png" alt="my name" id="myName" /></a
+            >
+            <!-- class="projectLinkButton"
+            target="_blank" -->
         <button
           class="navbar-toggler"
           type="button"
@@ -62,10 +68,8 @@
     <!-- שם הפרןיקט -->
 
     <div class="container-fluid mainSection">
-      <h1 class="text-center mainSectionH1">פרויקט 1</h1>
-      <p class="text-center mainSectionP">
-        רם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש ממלא מקום
-        בעת עריכה, בתחום הדפוס, ההדפסה והפרסום.
+      <h1 class="text-center mainSectionH1">פרויקט 1 </h1>
+      <p class="text-center mainSectionP">האתר שיוביל את העסק שלך למחר
       </p>
 
       <div class="container  text-center buttonContainer">
