--- a/projects/projectName7/project7LandingPage.html
+++ b/projects/projectName7/project7LandingPage.html
@@ -24,7 +24,12 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <img src="images/profile-image.jpeg" alt="profile" id="profileImage" />
-        <img src="images/myName.png" alt="my name" id="myName" />
+        <!-- <img src="images/myName.png" alt="my name" id="myName" /> -->
+        <a
+              
+              href="../../index.html"
+              ><img src="images/myName.png" alt="my name" id="myName" /></a
+            >
 
         <button
           class="navbar-toggler"
