--- a/projects/projectName1/project1LandingPage.html
+++ b/projects/projectName1/project1LandingPage.html
@@ -27,11 +27,10 @@
         <!-- <img src="images/myName.png" alt="my name" id="myName" /> -->
         <a
               
-              href="../../index.html"
+              href="/projects/projectName1/project1LandingPage.html"
               ><img src="images/myName.png" alt="my name" id="myName" /></a
             >
-            <!-- class="projectLinkButton"
-            target="_blank" -->
+            
         <button
           class="navbar-toggler"
           type="button"
