fix guess game rsposivness

--- a/projects/guessTheNumber/guessTheNumber.html
+++ b/projects/guessTheNumber/guessTheNumber.html
@@ -22,7 +22,7 @@
     <div class="main">
       <div class="container">
         <div class="row">
-          <div class="col-6 text-center" id="leftColumn">
+          <div class="col-12 col-md-6 text-center" id="leftColumn">
             <h1 class="display-4" style="color: red">Guess the Number</h1>
             <p>You have 5 attemps to guess number (1-10)</p>
 
@@ -48,7 +48,7 @@
           </div>
           
 
-          <div class="col-6 text-center" id="rightColumn">
+          <div class="col-12 col-md-6  text-center" id="rightColumn">
             <p class="rightSizeText">Please enter number between 1 and 10</p>
             
             <div class="answers"></div>
