Add nav mouse hoover functionality

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         class="navbar navbar-expand-sm bg-body-tertiary"
         style="display: flex; justify-content: space-between"
       >
-        
         <div style="display: flex">
           <img
             src="images/profile-image.jpeg"
@@ -43,7 +42,7 @@
             alt="my name"
             class="img-fluid"
             id="myName"
-            style="margin-top: 10px;"
+            style="margin-top: 10px"
           />
         </div>
         <div>
@@ -58,44 +57,30 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse navM" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#contact" style="white-space: nowrap"
-                  >צור קשר</a
+                <a class="nav-link" href="#contact"
+                  ><p class="menueItem">צור קשר</p></a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#work">עבודות</a>
+                <a class="nav-link" href="#work"
+                  ><p class="menueItem">עבודות</p></a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">אודות</a>
+                <a class="nav-link" href="#about"
+                  ><p class="menueItem">אודות</p></a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ראשי</a>
+                <a class="nav-link" href="#"><p class="menueItem">ראשי</p></a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-
-      <!-- <div id="flex-container">
-        <img src="images/profile-image.jpeg" alt="profile" id="profileImage" />
-        <img src="images/myName.png" alt="my name" id="myName" />
-        <nav>
-          
-          <label for="checkHamburger" class="labels"
-            ><div class="hamburger">&#9776;</div></label
-          >
-          <input type="checkbox" id="checkHamburger" />
-          <ul class="dropDown">
-            <li><a href="#contact">צור קשר</a></li>
-            <li><a href="#work">עבודות</a></li>
-            <li><a href="#about">אודות</a></li>
-            <li><a href="#">ראשי</a></li>
-          </ul>
-        </nav>
-      </div> -->
     </header>
 
     <!-- path1 (design change ) is אזור פתיחה:-->
@@ -591,5 +576,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./scripts/Gallery.js"></script>
   </body>
 </html>
