--- a/projects/reversi/reversi.html
+++ b/projects/reversi/reversi.html
@@ -21,34 +21,13 @@
 
     <div class="board">
       <div class="divTable">
-        <!-- <div class="container customCon">
-      <div class="row customRow" id="row1">
-        <div class="col-1  d-flex justify-content-center  customCol" id="col1"><div class="stoneWhite"></div></div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col2">2</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col3">1</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col4">2</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col5"><div class="stoneWhite"></div></div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col6">2</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col7">1</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col8">2</div>
-      </div>
-      <div class="row customRow" id="row2">
-        <div class="col-1  d-flex justify-content-center customCol" id="col1"><div class="stoneBlack"></div></div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col2">2</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col3">1</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col4">2</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col5"><div class="stoneWhite"></div></div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col6">2</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col7">1</div>
-        <div class="col-1  d-flex justify-content-center customCol" id="col8">2</div>
-      </div>
-    </div> -->
+       
 
         <table class="tableReversi">
           <tr class="rowR" id="row1">
             <td class="cellR inLine1">
               <div class="centerCircle">
-                <div class="stoneBlack"></div>
+                
               </div>
             </td>
             <td class="cellR inLine2"><div class="centerCircle"></div></td>
@@ -62,7 +41,7 @@
           <tr class="rowR" id="row2">
             <td class="cellR inLine1"><div class="centerCircle"></div></td>
             <td class="cellR inLine2">
-              <div class="centerCircle"><div class="stoneWhite"></div></div>
+              <div class="centerCircle"></div>
             </td>
             <td class="cellR inLine3"><div class="centerCircle"></div></td>
             <td class="cellR inLine4"><div class="centerCircle"></div></td>
@@ -112,14 +91,14 @@
             <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
           <tr class="rowR" id="row7">
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
-            <td class="cellR inLinev"><div class="centerCircle"></div></td>
+            <td class="cellR inLine1"><div class="centerCircle"></div></td>
+            <td class="cellR inLine2"><div class="centerCircle"></div></td>
+            <td class="cellR inLine3"><div class="centerCircle"></div></td>
+            <td class="cellR inLine4"><div class="centerCircle"></div></td>
+            <td class="cellR inLine5"><div class="centerCircle"></div></td>
+            <td class="cellR inLine6"><div class="centerCircle"></div></td>
+            <td class="cellR inLine7"><div class="centerCircle"></div></td>
+            <td class="cellR inLine8"><div class="centerCircle"></div></td>
           </tr>
           <tr class="rowR" id="row8">
             <td class="cellR inLine1"><div class="centerCircle"></div></td>
