still working on recursion

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <!-- topBar (design change ) is אזור עליון:-->
-    <header class="topBar w-100">
+    <header class="topBar w-100 sticky-fix">
       <nav
         class="navbar navbar-expand-sm bg-body-tertiary"
         style="display: flex; justify-content: space-between"
