remove debug messages

--- a/projects/reversi/reversi.html
+++ b/projects/reversi/reversi.html
@@ -139,12 +139,7 @@
     
   </div>
 
-  <!-- <div class="container " id="containerID">
-    <div class="overlay"><span>Game End </span><br>
-    <span id="spanId"></span><br><br><br>
-  <span>Please press Restart</span>
-</div>
-</div> -->
+
 
 <div id="customAlert" class="custom-alert">
   <span class="closebtn" onclick="closeAlert()">&times;</span>
@@ -152,10 +147,10 @@
 </div>
 
   </body>
-  <!-- <script
+  <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
-  ></script> -->
+  ></script>
   <script src="./scripts/reversi.js"></script>
 </html>
