Complete reversi media set for mobile

--- a/projects/reversi/reversi.html
+++ b/projects/reversi/reversi.html
@@ -150,15 +150,15 @@
 <!-- <div style="visibility: visible;"> -->
 <div id="helpModalWindows" >
   <div
-    class="modal fade show"
+    class="modal fade show "
     id="exampleModalLong"
     tabindex="-1"
     aria-labelledby="exampleModalLongTitle"
     aria-modal="true"
     role="dialog"
-    style="display: block; padding-left: 0px"
+    style="display: block; padding-left: 0px; "
   >
-    <div class="modal-dialog">
+    <div class="modal-dialog ">
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="exampleModalLongTitle">
@@ -172,7 +172,7 @@
             aria-label="Close"
           ></button>
         </div>
-        <div class="modal-body" style="min-height: 100px">
+        <div class="modal-body help-mod" >
           <img src="./images/reversi.jpg" alt="reversi">
           <h2>Rules</h2>
           <p>
@@ -185,7 +185,7 @@
             A Japanese publication in 1907 titled World Games Rules Complete Collection (世界遊戯法大全) describes the board game reversi with the same rules as Othello where the first four pieces go in the center in a diagonal pattern and the player who cannot make a move simply passes.[3]
           </p>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer" >
           <button
             type="button"
             class="btn btn-secondary"
@@ -194,9 +194,7 @@
           >
             Close
           </button>
-          <!-- <button type="button" class="btn btn-primary">
-            Save changes
-          </button> -->
+        
         </div>
       </div>
     </div>
